<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addbook_location_description_field"/>
            <AutoCompleteTextView
                android:id="@+id/modal_actv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addbook_room_field"/>
            <AutoCompleteTextView
                android:id="@+id/modal_actv_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addbook_floor_field"/>
            <AutoCompleteTextView
                android:id="@+id/modal_actv_floor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addbook_city_field"/>
            <AutoCompleteTextView
                android:id="@+id/modal_actv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addbook_country_field"/>
            <AutoCompleteTextView
                android:id="@+id/modal_actv_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/modal_btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookinfo_modal_btn"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>