<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addexemplary_activity_layout_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    <ListView
        android:id="@+id/addExemp_lv_books"
        android:choiceMode="singleChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
    <Button
        android:id="@+id/addExemp_btn_diffBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addexemplary_btn_different_book"
        android:visibility="gone"/>
    <Button
        android:id="@+id/addExemp_btn_abort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_abort" />
</LinearLayout>