<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_cell"
    android:layout_weight="1.5"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addExemp_tv_bookID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/addExemp_tv_bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/addexemplary_list_title"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/addExemp_tv_authors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/addexemplary_list_author" />
    <TextView
        android:id="@+id/addExemp_tv_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:text="@string/addexemplary_list_editor" />
    <TextView
        android:id="@+id/addExemp_tv_exemps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:paddingBottom="2dp"/>
</LinearLayout>